<resources>
    <string name="app_name">Jambo Merchant</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Jambo Merchant</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_add_store">AddStore</string>
    <string name="title_activity_manage_store">ManageStore</string>
    <string name="login_Register">Dont have an account? Signup.</string>

    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="create">Create an Account</string>

    <string-array name="category_arrays">
        <item>Fast Food</item>
        <item>Medicine</item>
        <item>Clothing</item>
        <item>Home Accessories</item>
        <item>Food</item>
        <item>Groceries</item>
    </string-array>

    <string name="title_activity_add_items">AddItems</string>

    <string name="ItemName">Item Name</string>
    <string name="ItemDesc">Item Description</string>
    <string name="SelectPhoto">Select a photo</string>
    <string name="UploadPhoto">Upload</string>
    <string name="submit">submit</string>

    <string name="AddStore">Add Store</string>
    <string name="ManageStore">Manage Store</string>
    <string name="Busname">Business name</string>
    <string name="BusLocation">Business Location</string>

    <string name="BusnCategory">Pick category</string>
    <string name="full_names">Full Names</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in.</string>
    <string name="logo">JamboBike</string>
    <string name="textview">JamboBike</string>

</resources>
