<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_gradient"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="118dp"
            android:layout_height="83dp"
            android:layout_weight="0.25"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ph_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="189dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/textview"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35sp"
            tools:text="JamboBike" />
    </LinearLayout>

    <EditText
        android:id="@+id/fnames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/full_names"
        android:inputType="textPersonName"
        android:padding="@dimen/login_text_padding"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/input_login_hint"
        android:importantForAutofill="no"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="@dimen/login_text_padding"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/input_login_hint"
        android:importantForAutofill="no"
        tools:targetApi="o"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="@dimen/login_text_padding"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/input_login_hint"
        android:importantForAutofill="no"
        tools:targetApi="o"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/login_text_padding"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/input_login_hint"
        android:importantForAutofill="no"
        tools:targetApi="o"/>

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="@dimen/login_text_padding"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/input_login_hint"
        android:importantForAutofill="no"
        tools:targetApi="o"/>

    <Button
        android:id="@+id/signup_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="@string/signup" />

    <Button
        android:id="@+id/loginPage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/already_have_an_account_log_in"/>

</LinearLayout>