<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddStore">

    <EditText
        android:id="@+id/bsname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Busname"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="37dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="135dp" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/BusLocation"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="251dp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="285dp"
        android:layout_height="31dp"
        android:entries="@array/category_arrays"
        android:prompt="@string/BusnCategory"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="335dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="284dp"
        android:layout_height="33dp"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="384dp" />

    <Button
        android:id="@+id/submitstore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="430dp" />
</LinearLayout>